app/assets/sass/application.scss
// global styles for <a> and <p> tags
$govuk-global-styles: true;

// Import GOV.UK Frontend
@import "node_modules/govuk-frontend/all";

// Patterns that aren't in Frontend
@import "patterns/check-your-answers";
@import "patterns/task-list";
@import "patterns/related-items";

// Components that aren't in Frontend
@import "components/cookie-banner";

// Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
@import "stat-highlights";
@import "activity-timeline";
@import "attachment-list";

// Make images fit to column
div[class^="govuk-grid-column-"] img {
  width: 100%;
}

// Ensure table header columns are wide enough that the headers are easily readable
.govuk-table .govuk-table__header:first-of-type {
  /* TODO:Dev This really ought to be min-width but that doesn't work on table cells. Try to find a workaround? */
  width: 33%;
}

// Stop text on left half from crowding content on the right
.govuk-grid-column-one-half:first-of-type .govuk-body {
  max-width: 96%;
}

// Remove default bottom-margin from content at the end of a tab
.govuk-tabs__panel > :last-child .govuk-table {
  margin-bottom: govuk-spacing(0);
}

